# finance-dashboards

./: .dockerignore  .gitignore  CLAUDE.md  app.py  app3.py  code_dump.txt  install.sh  pyproject.toml  requirements.txt  run_queries.py  ~$Revenue Data Warehouse - back up v2-2.xlsx
archive/apps/: app10.py  app11.py  app12.py  app13.py  app2.py  app3.py  app4.py  app5.py  app6.py  app7.py  app9.py
notebooks/: explore.ipynb  explore_clean.ipynb  explore_labour_pipeline_targets.ipynb  explore_output.txt  full_exploration.ipynb  gross_margin_analysis.ipynb
scripts/: run_queries.py
src/config/: settings.py
src/db/: connection.py  explore.py
src/models/: financials.py
src/queries/: 1_revenue_cogs_labour_by_period.sql  2_be_allocation.sql  3_ae_synd_allocation.sql  4_rta_allocation.sql  5_gross_margin.sql  6_labour_by_type.sql  6_labour_by_type.sql.bak  7_pipeline.sql  8_targets.sql  9_labour_by_client_service_line.sql  people_costs.sql  pipeline.sql  profitability.sql  targets.sql
src/queries/archive/: num_projects.sql  people_costs_by_role.sql  pipeline.sql  revenue_by_period.sql
src/services/: finance_service.py
src/utils/: charts.py  constants.py  filters.py  formatters.py  helpers.py  styles.py  theme.py  view_helpers.py
src/views/: cogs.py  contribution.py  explorer.py  fixed_cost.py  labor.py  margin.py  overview.py  pipeline.py  profitability.py  revenue.py  targets.py
src/views/archive/: cogs.py  contribution.py  pipeline.py  revenue.py
tests/: test_filters.py  test_finance_service.py  test_formatters.py
(+9 files in other folders)
